--- a/Homework1/homework1.tex
+++ b/Homework1/homework1.tex
@@ -1,5 +1,4 @@
 \documentclass[12pt]{cgtmd}
-
 \begin{document}
 \handout{1}{July 4, 2013}{Problem Set 1}
 
@@ -14,13 +13,61 @@
 
                 On the other hand, if in another NE one player's mixed strategy $(p_1, p_2, p_3)$, $p_i = \frac{1}{3}$ does not hold. Let's just suppose $p_1$ is the biggest one. Then the best mixed response for the other will be $(0, 1, 0)$, then $(p_1, p_2, p_3)$ should be $(0, 0, 1)$, that is a controdiction.
             \item We use a pair to represent the probility of B and S. 
-                
+
                 $u(B, B) = (2, 1), u(S, S) = (1, 2)$, others euqal to zero.
 
                 Let $\sigma_1 = (\frac{2}{3}, \frac{1}{3}), \sigma_2 = (\frac{1}{3}, \frac{2}{3})$, we will prove this is a mixed NE. On one hand, iven $\sigma_2 = (\frac{1}{3}, \frac{2}{3})$. Let $\sigma_1$ be $(p, q)$. Then $u_1 = 2\frac{1}{3}p + \frac{2}{3}q = \frac{2}{3}(p + q) = \frac{2}{3}$, so  the strategy of player 1 is a best mixed response. By symmetry, this is true for player 2 either.
             \item There are two pure equilibrum in BoS. Both B and both S. Since in each case, for each player, change to another strategy won't get more score.
-            \item IN the constructed game, each player can choose a real number, and his utility is equal to the number he choose. Obviously, no matter what strategy one player choose, he can always change to a better one.
+            \item In the constructed game, each player can choose a real number, and his utility is equal to the number he choose. Obviously, no matter what strategy one player choose, he can always change to a better one.
         \end{enumerate}
+    \item
+        \begin{enumerate}
+            \item Let's just suppose $n > 1$.
+                First we formulate it as a normal form game.
+
+                \begin{align*}
+                    N &= \{1, 2, 3, \cdots, n\} \\
+                    S &= N_+^n \\
+                    u_i &= \left\{ \begin{array}{ll}
+                        v_i - s_i  & s_i = s_{max} \text{ and } i < j \text{ if } s_j = s_{max}\\
+                        0 & \text{otherwise}
+                    \end{array} \right.
+                \end{align*}
+
+                Then, we will prove, if there is a NE, then player 1 obtains the object. If not, then Let $k$ be the one obtains the object, $k \neq 1$. Then we have $s_k \leq v_k$, since any player won't choose to lose money. Thus $s_1 < s_k \leq v_k < v_1$. Then player 1 can change his bid to $v_k$ to win this auction and win non-zero profit.
+
+                Afterwards, let's find all the NE. We have proved in a NE, player 1 submits the highest bid. If there are no other player submit a bid as high as player 1, player 1 can change his bid lower. In addition, if player 1 submit a bid lower than $v_2 - 1$, player2 can change his bid to $v_2 - 1$. So far, if a strategy profile is a NE, it should has three properties as following   
+                \begin{itemize}
+                    \item $v_1 \geq s_1 \geq v_2 - 1$
+                    \item $\forall j, s_j \leq s_1$
+                    \item $\exists j, s_j = s_i$
+                \end{itemize}
+                And we can easily verify that if the three properties are satisfied, it will be a NE.
+            \item First we formalize weak dominance.
+
+                A strategy $s_i$ weakly dominate $s_i'$ if
+                $$\forall s_{-i}, u_i(s_i, s_{-i}) \geq u_i(s_i', s_{-i})$$
+                and a strategy is weakly dominant if it weakly dominate any other strategies.
+
+                Then we will prove for any player $i$, bid for $v_i$ is a weak dominance. In the first case, player $i$ wins the auction. If he wants to get more profit, he will pay less than he should pay, and thus he cannot win the auction, that is a controdiction. In the second case, player $i$ doesn't win the auction, then obviously he cannot get more profit.
+
+                Finally, let's consider a equilibriam in which the winner is not player 1. 
+                $$v_1 = 3, v_2 = 2, v_1 = 1$$
+                $$s_1 = 1, s_2 = 10, s_3 = 2$$
+                It is indeed a NE and in this case player 2 wins the auction.
+
+        \end{enumerate}
+    \item First we show the sequence as below.
+        \begin{align*}
+            S^1 &= \{1, 2, 3, \cdots, 100\}^{15}\\
+            S^2 &= \{1, 2, 3, \cdots, 99\}^{15}\\
+            S^3 &= \{1, 2, 3, \cdots, 98\}^{15}\\
+            \vdots\\
+            S^{100} &= \{1\}^{15}
+        \end{align*}
+        Then we will explain why the sequence is like that. 
+
+        Here we use a induction. We denote $1/3$ of the class average as $X$. Suppose our last strategy profile is $\{1, 2, 3, \cdots, k\}^{15}$, then for each player, strategy $k$ is strictly dominated by $1$, since $X \leq k / 3 < (1 + k) / 2$, which means strategy $1$ is always better than strategy $k$. 
 \end{enumerate}
 
 \end{document}
