--- a/template/sample.tex
+++ b/template/sample.tex
@@ -1,7 +1,7 @@
 \documentclass[12pt]{cgtmd}
 
 \begin{document}
-\handout{1}{July 4, 2013}{Problem Set 1}
+\handout{?}{Month Day, Year}{Problem Set ?}
 
 \begin{enumerate}
     \item 
