--- a/Homework3/homework3.tex
+++ b/Homework3/homework3.tex
@@ -20,24 +20,14 @@
             \item When $d$ goes to infinity, $(d + 1)^{\frac{d + 1}{d}}$ goes to infinity, $(d + 1)^{\frac{1}{d}}$ goes to 1, then the PoA goes to infinity. 
         \end{enumerate}
     \item Let $X$ denote the network's optimal solution. If there is a NE, whose cost is greater than $NX$. Then there must be a player whose cost is greater then $X$. This player can then change his strategy to any other one in the optimal solution, the new cost must be less or equal to $X$. Thus this is not a NE, which is a contradiction.
-    \item First, we will find an optimal solution to the problem. For each player, his expected cost is at least one, so the total cost is at least $n$. When each player choose a different machine, the total cost can reach n. So $c_{min} = n$.
+    \item First, we will find an optimal solution. For each player, his expected cost is at least $1$, so the total expected cost is at least $n$. When each player choose a different machine, the total cost can reach n. So $c_{min} = n$.
 
-        Then we will find all the NE, pure or mixed. We convert this game into a graph. $n$ nodes representing players and $n$ nodes representing machines. If one player assign a positive probability to a machine, then there is a edge between them, the weight of the edge is the probability being assigned. Now we claim that any NE looks like this: For any player, the edges directly connected to him have the same weight, and the expected load of each machine are 1.
+        Then we will give an upper bound of the worst case. For each player $p$, he has a fixed cost $1$, since the expected load made by himself is always $1$. Now let's fix other players' decisions, and suppose $p$ has not assigned his distribution yet. He will choose the machines which have the least expected load and can assign probability arbitrarily among them. We shoud note that at this moment the total load of all machines is $(n - 1)$, so the expected load of machines which $p$ will choose is at most $(\frac{n - 1}{n})$. Now add back the fixed $1$ load, the expected cost of $p$ after he assigns his distribution is at most $(1 + \frac{n - 1}{n})$. Thus the expected total cost is at most $n(1 + \frac{n - 1}{n}) = 2n - 1$
 
-        Next we will prove this claim. On the one hand, we prove that these graphs are NE. For any player, suppose his degree is $d$. Taking no consideration of this particular player, the expected load of machines connected to him is $(1 - \frac{1}{d})$, the expected load of other machines are $1$. So his strategy is really a best response. 
-        
-        On the other hand, we prove that other graphs are not NE. First we show that the expected load of all the machines are the same. Unfortunately I don't know how to prove it.
-        
-        Then we prove for each player, the edges directly connected to him have the same weight. Suppose it is not true, there will be a player $p$, and machines $A$ and $B$, $p$ choose $A$ with positive probability $q_a$ and choose $B$ with positive probability $q_b$, where $q_a > q_b$. Since the expected load of $A$ and $B$ are both $1$, this means among the other players, the expected load of $A$ is less than $B$. Then $p$ has no reason to assign a positive probability to $B$, this leads to a contradiction. 
-
-        Thus in a NE, for each player, let $d$ be his degree, his cost is
-        $$1 + (1 - \frac{1}{d})$$
-        It takes its maximal value when $d = n$. So 
-        $$c_{max} \leq n(2 - \frac{1}{n})$$ 
-        the maximal value can be reached when $d_i = n, \forall i$.
+        Next we will show how we can reach this upper bound. If any player use any machine with probability $\frac{1}{n}$, then according to the argument above, it is obviously a NE, and the expected total cost is actually $(2n - 1)$.
 
         Finally, we can calculate the PoA, which is
-        $$\frac{c_{max}}{c_{min}} = \frac{n(2 - \frac{1}{n})}{n} = 2 - \frac{1}{n}$$
+        $$\frac{c_{max}}{c_{min}} = \frac{2n - 1}{n} = 2 - \frac{1}{n}$$
 \end{enumerate}
 
 \end{document}
