--- a/Homework5/homework5.tex
+++ b/Homework5/homework5.tex
@@ -4,7 +4,9 @@
 \handout{5}{July 20, 2013}{Problem Set 5}
 
 \begin{enumerate}
-    \item 
+    \item From the description we know that if $o \in f^{CON}(\theta)$, then for any $o'$, a weak majority of players think $o$ is better than $o'$. Now after the players have changed their true type profile, the players who had thought $o$ is better than $o'$ still agree with their previous view. So there are still a weak majoraty of players thinks $o$ is better than $o'$. Thus $f^{CON}$ is monotone.
+    \item Let's consider a good outcome $o$. First we know that $o$ get at least $\frac{2(1 + 2 + 3)}{3} = 4$ points. In the first case, $o$ get at least one $3$, after the change of profile, $o$ get no less points and others get no more points, so $o$ is still a good outcome. In the second case, $o$ get two $2$, then the other will get $(1, 3)$ and $(3, 1)$, we can easily see that other outcomes' score cannot be greater than $o$'s as long as the lower-contour property holds.
+    \item It's not monotone. Let's consider a good outcome. In this outcome, the winner get negtive utility, then no matter he lower his valuation, his lower contour won't change. But when he change his valuation to the value that lower than any other player's valuation, he is still the winner while not having the highest valuation, this is not a good outcome. So this social correspondence is not monotone.
 \end{enumerate}
 
 \end{document}
